tests/NormalTests/paczka1/small_fuzzy/70288492.err
Error in line 2: tvVQHHNwUP S308 91,7
Error in line 1: uTe2hLTpCK A385 49,1
Error in line 8: vIxuxmS85 S308 68,4
